; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_TestStringPrintf.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_testmodule.c_TestStringPrintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [38 x i8] c"Got %d args. argv[1]: %s, argv[2]: %s\00", align 1
@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TestStringPrintf(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @RedisModule_AutoMemory(i32* %9)
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 3
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @RedisModule_WrongArity(i32* %14)
  store i32 %15, i32* %4, align 4
  br label %32

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32**, i32*** %6, align 8
  %20 = getelementptr inbounds i32*, i32** %19, i64 1
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @RedisModule_StringPtrLen(i32* %21, i32* null)
  %23 = load i32**, i32*** %6, align 8
  %24 = getelementptr inbounds i32*, i32** %23, i64 2
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @RedisModule_StringPtrLen(i32* %25, i32* null)
  %27 = call i32* @RedisModule_CreateStringPrintf(i32* %17, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %18, i32 %22, i32 %26)
  store i32* %27, i32** %8, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @RedisModule_ReplyWithString(i32* %28, i32* %29)
  %31 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %16, %13
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @RedisModule_AutoMemory(i32*) #1

declare dso_local i32 @RedisModule_WrongArity(i32*) #1

declare dso_local i32* @RedisModule_CreateStringPrintf(i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @RedisModule_StringPtrLen(i32*, i32*) #1

declare dso_local i32 @RedisModule_ReplyWithString(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
